fix: increases form size and stops overflows

--- a/src/pages/profile/sebo/style.css
+++ b/src/pages/profile/sebo/style.css
@@ -119,7 +119,7 @@
 }
 
 .form-edit-sebo {
-  width: 70%;
+  width: 100%;
   display: flex;
   padding: 32px;
   flex-direction: column;
@@ -127,6 +127,7 @@
   gap: 32px;
   align-self: stretch;
   background: #fbf8f3;
+  overflow: auto;
 }
 
 .container-data-form {
@@ -134,4 +135,5 @@
   justify-content: space-between;
   align-items: flex-start;
   align-self: stretch;
+  width: 46%;
 }
